align i with l fix nesting of typist

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -179,7 +179,7 @@ main.container section.content p {
   line-height: 0;
   letter-spacing: 0.135rem;
   margin: 0;
-  padding: 0.4rem 0 0 21.5rem;
+  padding: 0.4rem 0 0 22rem;
   font-family: monospace;
   font-style: normal;
   font-weight: 400;
